[workspace]
members = [
    "crypto-primitives",
    "macros",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
authors = [ "arkworks contributors" ]
description = "A library of useful cryptographic primitives"
homepage = "https://arkworks.rs"
repository = "https://github.com/zypher-game/ark-crypto-primitives"
documentation = "https://docs.rs/ark-crypto-primitives-zypher/"
keywords = [ "r1cs", "pedersen", "blake2s", "snark", "schnorr" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md"]
license = "MIT/Apache-2.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
